--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -5,12 +5,12 @@ When enemy is dead, the selection process still continues; not properly exiting 
 
 TODO:
 
-1. Change defense to be a bit less overpowered
---- Add temporary stats to Entities that get changed when certain things are done--i.e. defending multiple times
---- Make attacks break defenses--more complex later, but for now just subtracts from the temp defense
+1. Make damage more complex (create a damage curve based on defense rather than flat subtraction. Also add breaking
+defense by attacking (each attack subtracts temporary defense, even into negative, for combo breaks)). Also add piercing
+to weaponry to bypass some defense, or destroy defense better.
 
-2. Add actual enemies, and figure out how to store their data -- enum? JSON? I think enum at first, then individual
-methods within the enemy object classes that determine their stats based on the enum base levels.
---- Add 3 enemies that are randomly selected at the start of the battle.
+2. Add randomly selected enemies between 3
 
 3. Refactor the choose target method, removing some nesting, making the loops more efficient
+
+4. Find out why the program is still running after the battle is over; what while loop is unchecked?
